2004-12-22 Alain Magloire

	On going work to clean cdt.ui from misc. warnings
	and removing the deprecated interfaces in Eclipse-3.1

2004-12-21 Alain Magloire
	We use TogglePresentation action definition ID rather the one
	define in the CDT, since now the platfrom defines one.
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorActionContributor.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	* src/org/eclipse/cdt/internal/ui/editor/ToggglePresentationAction.java

2004-12-21 Alain Magloire
	Fix PR 81635 patch form Przemek
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java

2004-12-20 Alain Magloire
	Fix PR 50578
	* src/org/eclipse/cdt/internal/ui/cview/CViewDropAdapter.java

2004-12-14 Alain Magloire
	PR 80631 Patch form Przemek Tomaszewski
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutilinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinerProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEdtiroActionDefinitionIds.java
	* src/org/eclipse/cdt/internal/ui/text/COutlineInformationControl.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java
	* src/org/eclipse/cdt/internal/ui/util/ProblemTreeViewer.java
	* src/org/eclpse/cdt/ui/CElementContentProvider.java
	* plugin.properties.
	* plugin.xml

2004-12-12 Alain Magloire
	PR 80631 Patch form Przemek Tomaszewski 
	* src/org/eclipse/cdt/internal.ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal.ui/preferences/CEditorPreferencePage.properties
	* src/org/eclipse/cdt/internal/ui/text/CBraceRule.java
	* src/org/eclipse/cdt/internal/ui/text/CCodeScanner.java
	* src/org/eclipse/cdt/internal/ui/text/CppCodeScanner.java