@@ -1,3 +1,9 @@
+2005-01-07 Alain Magloire
+	Fix PR 82202
+	* src/org/eclipse/cdt/internal/ui/cview/CViewDropAdapter.java
+	* src/org/eclipse/cdt/internal/ui/editor/DocumentAdapter.java
+	* src/org/eclipse/cdt/internal/ui/util/Resources.java
+
 2004-12-22 Alain Magloire
 
 	On going work to clean cdt.ui from misc. warnings
